# FinDKG

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  train_DKG_run.py
FinDKG_dataset/: README.md
dkg/: data.py  eval.py  train.py
dkg/model/: embedding.py  model.py
dkg/model/gnn/: kgt.py
dkg/model/tpp/: log_norm_mix_tpp.py
dkg/utils/: cache.py  log_utils.py  train_utils.py
